--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://producthire.net/job/program-manager-business-systems/'>Program Manager, Business Systems | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://quad.referrals.selectminds.com/jobs/project-manager-client-services-13543'>Project Manager Client Services - Be Quad</a></h5> 
 <p><span class="badge badge-light">San Francisco, California United States</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -128,11 +132,11 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/biometrics-project-manager-31694'>Biometrics Project Manager - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/biometrics-project-manager-31694'>Biometrics Project Manager - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -144,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
+<h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">Washington, United States  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -160,7 +164,7 @@
 <p><span class="badge badge-light">Sunnyvale California  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/plaid/99304383-55cf-46b3-a75d-1d0a44bfb521'>Plaid - Design Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/plaid/99304383-55cf-46b3-a75d-1d0a44bfb521'>Plaid - Design Program Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -172,7 +176,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -288,7 +292,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -304,7 +308,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/5fa8bc7c-b739-45e3-9b69-87c51929bf30'>Rappi - Project Manager - Payments and Fraud</a></h5> 
+<h5><a href='https://jobs.lever.co/rappi/5fa8bc7c-b739-45e3-9b69-87c51929bf30'>Rappi - Project Manager - Payments and Fraud</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -396,7 +400,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -432,16 +436,12 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698601255-continuum-of-care-program-manager-for-underrepresented-populations'>City of Philadelphia Continuum of Care Program Manager for Underrepresented Populations | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
