--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://producthire.net/job/technical-product-manager-5/'>Technical Product Manager | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=twitter'>
+      Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=feed'>
       Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
   </a></h5> 
@@ -47,7 +57,7 @@
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668301-sr-product-manager'>Biogen Sr Product Manager | SmartRecruiters</a></h5> 
@@ -120,7 +130,7 @@
 <p><span class="badge badge-light">Las Vegas, Nevada  Austin, Texas  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dailypayinc/jobs/4470931002'>Job Application for Product Manager at DailyPay Inc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dailypayinc/jobs/4470931002'>Job Application for Product Manager at DailyPay Inc</a></h5> 
 <p><span class="badge badge-light">New York, New York  New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -196,7 +206,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -252,7 +262,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joininterface.recruiterbox.com/jobs/fk0jnha/'>
+<h5><a href='https://joininterface.recruiterbox.com/jobs/fk0jnha/'>
     Lead Product Designer at interface.ai
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -262,7 +272,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -308,7 +318,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -320,7 +330,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
+<h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -440,15 +450,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999698584056-product-owner-m-w-d-team-checkout-und-digital-payments'>E. Breuninger GmbH & Co. Product Owner (m/w/d) Team Checkout und Digital Payments | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698572380-senior-product-manager-mobile-f-m-d-'>lm group Senior Product Manager - Mobile (f/m/d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
